--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -66,3 +66,101 @@ h1 {
     margin: 15px 0 7px;
     letter-spacing: 1.5px;
 }
+
+
+/* Estilos do cabeçalho */
+header {
+    background-color: rgba(0, 0, 0, 0.7); /* Preto com 70% de transparência */
+    color: #ffffff;
+    padding: 10px 0;
+    position: fixed; /* Fixa o cabeçalho na parte superior */
+    top: 0;
+    width: 100%;
+    z-index: 1000; /* Garante que o cabeçalho esteja acima de outros elementos */
+}
+
+
+/* Estilos para a navegação do cabeçalho */
+nav ul {
+    list-style: none;
+    display: flex;
+}
+
+nav ul li {
+    display: inline;
+    margin-left: 20px;
+}
+
+nav ul li a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/* Estilos para o contêiner da pesquisa */
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/* Estilos para o formulário de pesquisa */
+.search-form .search-input-container {
+    display: flex;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0); /* Transparente */
+    background-repeat: no-repeat;
+    background-position: 11px 11px;
+    border: 1px solid #5ac1e7; /* Bordas azuis */
+    border-radius: 5px;
+    padding: 8px;
+}
+
+/* Estilos para o marcador de posição do formulário de pesquisa */
+.search-form .search-input-placeholder {
+    top: 50%;
+    padding: 3px;
+    font-size: 16px;
+    line-height: 21px;
+    color: #b7b7b7;
+}
+
+/* Estilos para a entrada do formulário de pesquisa */
+.search-form .search-input {
+    flex: 1;
+    padding: 9px 0;
+    margin-left: 10px;
+    font-size: 16px;
+    color: #e3ee4a; /* Cor do Texto na caixa de Texto */
+    border: none;
+    background: transparent;
+}
+
+/* Estilos para o marcador de posição do formulário de pesquisa quando focado */
+.search-form .search-input:focus + .search-input-placeholder {
+    display: none;
+}
+
+/* Estilos para o botão de pesquisa */
+.search-form .search-button {
+    color: #5ac1e7; /* Cor do Texto na Botao */
+    font-size: 16px;
+    background-color: transparent;
+    border: 1px solid #5ac1e7; /* Bordas azuis */
+    border-radius: 5px;
+    padding: 8px 12px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s; /* Transição suave de cores */
+}
+
+.search-form .search-button:hover {
+    background-color: #14b3db;
+    color: #f3f3f3;
+}
+
+/* Estilos do conteúdo principal */
+.conteudo-principal {
+    padding-top: 70px; /* Ajuste este valor para corresponder à altura do cabeçalho */
+}
