--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -130,6 +130,75 @@ nav ul li a {
     padding-top: 70px; /* Ajuste este valor para corresponder à altura do cabeçalho */
 }
 
+
+/* Estilos do Icone do Filtro */
+/* ============================== */
+  /* Estilos do funçao filtrar */
+   
+  .container-filter {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+  }
+  
+  .icon-filter {
+    display: flex;
+    align-items: center; /* Alinha verticalmente */
+    margin-bottom: 20px; /* Margem inferior */
+  }
+  
+  .icon-filter-img {
+    width: 30px; /* Largura do ícone */
+    height: auto;
+  }
+ 
+/* Container Filters */
+.container-filters {
+    display: flex;
+    justify-content: center;
+  
+    position: fixed;
+    top: 0;
+    left: -300px;
+    width: 250px;
+  
+    color: #555;
+    background-color: #f2f2f2;
+    height: 100%;
+    padding-top: 140px;
+    transition: all 0.3s linear;
+  }
+  
+  .container-filters.active {
+    left: 0;
+  }
+  
+  .filter-by-type {
+    display: flex;
+    flex-direction: column;
+  
+    gap: 20px;
+  }
+  
+  .filter-by-type span {
+    font-weight: 700;
+    font-size: 22px;
+  }
+  
+  .group-type {
+    display: flex;
+    gap: 10px;
+  
+    margin-left: 15px;
+  }
+  
+  .group-type label {
+    cursor: pointer;
+  }
+
+
+
 /* Estilos do Container de Pokémons */
 /* ================================= */
 
@@ -187,3 +256,177 @@ nav ul li a {
     margin: 15px 0 7px;
     letter-spacing: 1.5px;
 }
+
+
+
+/* Estilos do para o Rodape */
+/* ================================= */
+/* Estilos do Rodape */
+:root {
+    --color-neutral-0: #0e0c0c;
+    --color-neutral-10: #171717;
+    --color-neutral-30: #a8a29e;
+    --color-neutral-40: #f5f5f5;
+
+}
+
+* {
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    letter-spacing: 1px;
+}
+
+main {
+    height: 80vh;
+}
+
+footer {
+    width: 100%;
+    color: var(--color-neutral-40);
+}
+
+.footer-link {
+    text-decoration: none;
+}
+
+#footer_content {
+    background-color: var(--color-neutral-10);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem 3.5rem;
+}
+
+#footer_contacts h1 {
+    margin-bottom: 0.75rem;
+}
+
+#footer_social_media {
+    display: flex;
+    gap: 2rem;
+    margin-top: 1.5rem;
+} 
+
+#footer_social_media .footer-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: var(--color-neutral-40);
+    border-radius: 50%;
+    transition: all 0.4s;
+}
+
+#footer_social_media .footer-link i {
+    font-size: 1.25rem;    
+}
+
+#footer_social_media .footer-link:hover {
+    opacity: 0.8;
+}
+
+#instagram {
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+}
+
+#facebook {
+    background-color: #4267b3;
+}
+
+#whatsapp {
+    background-color: #25d366;
+}
+
+.footer-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+}
+
+.footer-list .footer-link {
+    color: var(--color-neutral-30);
+    transition: all 0.4s;
+}
+
+.footer-list .footer-link:hover {
+    color: #7f37c9;
+}
+
+#footer_subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+#footer_subscribe p {
+    color: var(--color-neutral-30);
+}
+
+#input_group {
+    display: flex;
+    align-items: center;
+    background-color: var(--color-neutral-0);
+    border-radius: 4px;
+}
+
+#input_group input {
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+}
+
+#input_group button {
+    background-color: #7f37c9;
+    border: none;
+    color: var(--color-neutral-40);
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+#input_group button:hover {
+    opacity: 0.8;
+}
+
+#footer_copyright {
+    display: flex;
+    justify-content: center;
+    background-color: var(--color-neutral-0);
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+
+@media screen and (max-width: 768px) {
+    #footer_content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 426px) {
+    #footer_content {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }
+}
+
+/*mobile*/
+@media (max-width: 768px) {
+    .rodape-div-1, .rodape-div-2, .rodape-div-3{
+        width: calc(50% - 20px);
+        padding: 10px;
+    }
+    .rodape-div{
+        padding: 60px 0px 40px 0px;
+    }
+}
+
+
+
