--- a/Assets/CSS/Perfil-Syle.css
+++ b/Assets/CSS/Perfil-Syle.css
@@ -1,7 +1,4 @@
-/* Estilos Globais */
-/* =============== */
 
-/* Define o modelo de caixa para todos os elementos, zera margens e preenchimentos, e define a fonte */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,10 +6,6 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
-/* Estilos do Corpo da Página */
-/* =========================== */
-
-/* Define o plano de fundo com gradiente linear e centraliza o conteúdo verticalmente */
 body {
     background: linear-gradient(to right, #d4d3dd, #efefbb);
     display: flex;
@@ -20,6 +13,67 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+h1 {
+    letter-spacing: 5px;
+}
+
+/* Container dos Pokémons */
+.pokeContainer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+/* Estilos de cada Pokémon */
+.pokemon {
+    background-color: #eee;
+    border-radius: 10px;
+    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+}
+
+/* Container da imagem do Pokémon */
+.imgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+}
+
+/* Estilos da imagem do Pokémon */
+.imgContainer img {
+    max-width: 90%;
+}
+
+/* Estilos das informações do Pokémon */
+.info {
+    margin-top: 20px;
+}
+
+/* Estilos do número do Pokémon */
+.number {
+    background-color: rgba(0, 0, 0, 0.15);
+    padding: 2px 13px;
+    border-radius: 10px;
+    font-size: 0.8rem;
+}
+
+/* Estilos do nome do Pokémon */
+.name {
+    margin: 15px 0 7px;
+    letter-spacing: 1.5px;
+}
+
+
 
 /* Estilos para Cabeçalho */
 /* ======================= */
@@ -229,64 +283,6 @@ nav ul li a {
 
 .dropdown:hover .dropdown-content {
     display: block;
-}
-
-/* Estilos do Container de Pokémons */
-/* ================================= */
-
-/* Container dos Pokémons */
-.pokeContainer {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-/* Estilos de cada Pokémon */
-.pokemon {
-    background-color: #eee;
-    border-radius: 10px;
-    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
-    margin: 10px;
-    padding: 20px;
-    text-align: center;
-}
-
-/* Container da imagem do Pokémon */
-.imgContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-}
-
-/* Estilos da imagem do Pokémon */
-.imgContainer img {
-    max-width: 90%;
-}
-
-/* Estilos das informações do Pokémon */
-.info {
-    margin-top: 20px;
-}
-
-/* Estilos do número do Pokémon */
-.number {
-    background-color: rgba(0, 0, 0, 0.15);
-    padding: 2px 13px;
-    border-radius: 10px;
-    font-size: 0.8rem;
-}
-
-/* Estilos do nome do Pokémon */
-.name {
-    margin: 15px 0 7px;
-    letter-spacing: 1.5px;
 }
 
 
